Implement BusinessHandlers except for postMenuImage and deleteMenuImage
