# client/api/openapi.yaml
@@ -253,6 +253,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/DefaultResponse'
           description: Invalid request format
+        "409":
+          content:
+            application/json:
+              example:
+                status: ALREADY_EXISTS
+              schema:
+                $ref: '#/components/schemas/DefaultResponse'
+          description: Business already exists
         "401":
           content:
             application/json:
@@ -1307,6 +1315,9 @@ components:
         gpsCoordinates:
           type: string
           x-go-custom-tag: binding:"required"
+        description:
+          type: string
+          x-go-custom-tag: binding:"required"
         nip:
           type: string
           x-go-custom-tag: binding:"required"
@@ -1343,7 +1354,8 @@ components:
       properties:
         name:
           type: string
-          x-go-custom-tag: binding:"required"
+        description:
+          type: string
       type: object
     PostBusinessAccountMenuImageResponse:
       example:
